Gaim: The Pimpin' Penguin IM Client that's good for the soul!

version 1.0.1cvs
	New Features:
	* Use the GNOME default browser when opening links if you're running GNOME
	  (Alex Duggan)

	Bug Fixes:
	* Send-As menu duplicates less work (Dave West)
	* Can now see your own MSN buddy icon (Felipe Contreras)
	* Jabber roomlist fetches work again
	* Close buttons on tabs in existing conversations correctly reflect the
	  "show close buttons on tabs" preference (Nathan Fredrickson)
	* Fix to make the get_signon(buddy) perl plugin function work (Gregory C.
	  Harfst)
	* Fix crashes when reloading the gevolution plugin (Henry Jen)
	* Wrap at character boundaries if there is not enough space for a full word
	* 64 bit compile warning fixes

version 1.0.0 (09/17/2004):
	New Features:
	* Drag-and-drop buddy support for the Invite dialog (Stu Tomlinson)
	* Drag-and-drop buddy support for the Pounce dialog (Stu Tomlinson)
	* View Chat log available from the interface (Daniel Atallah)
	* Ability to receive offline messages in character encodings
	  other than ASCII (thanks to Nick Sukharev)
	* File transfer status messages printed to conversation
	  windows (Dave West)
	* Display file transfer messages when someone sends you a file
	  over AIM (Dave West)
	* Handle MSN buddy lists more sanely (Felipe Contreras)
	* Zephyr can use tzc to run from behind a firewall (Arun A Tharuvai)

	Bug Fixes:
	* Work around window manager stupidity with new dialog windows (Dave West)
	* Compile with gtk 2.5.x (Gary Kramlich)
	* Escape invalid characters in log names (Daniel Atallah)
	* Fix for clicking add in an msn chat with 2 or more people in your buddy
	  list (Daniel Atallah)

version 0.82.1 (08/27/2004):
	Bug Fixes:
	* Fix a crash when changing the preference for how to display buttons
	  on conversation windows
	* Remove a stray printf() when beginning new conversations and logging
	  is enabled

version 0.82 (08/26/2004):
	New Features:
	* Ability to set available messages for AIM