@@ -4,6 +4,8 @@ version 1.0.1cvs
 	New Features:
 	* Use the GNOME default browser when opening links if you're running GNOME
 	  (Alex Duggan)
+	* Added support for multiple addressbooks in the gevolution plugin
+	  (Henry Jen).
 
 	Bug Fixes:
 	* Send-As menu duplicates less work (Dave West)
@@ -13,7 +15,8 @@ version 1.0.1cvs
 	  "show close buttons on tabs" preference (Nathan Fredrickson)
 	* Fix to make the get_signon(buddy) perl plugin function work (Gregory C.
 	  Harfst)
-	* Fix crashes when reloading the gevolution plugin (Henry Jen)
+	* Fixed crashes when reloading the gevolution plugin (Henry Jen)
+	* Fixed some memory leaks in the gevolution plugin.
 	* Wrap at character boundaries if there is not enough space for a full word
 	* 64 bit compile warning fixes
 
